fix(kit): `ProgressCircle` prevents possible shrinkage (with shape distortion) inside flex container (#11157)

--- a/projects/kit/components/progress/progress-circle/progress-circle.style.less
+++ b/projects/kit/components/progress/progress-circle/progress-circle.style.less
@@ -24,6 +24,7 @@
     // TODO: delete this line after bumping browser support of Safari to 16+
     font-size: 1rem; // to use em units inside svg (Safari doesn't support rem units inside svg)
     inline-size: var(--t-diameter);
+    min-inline-size: var(--t-diameter);
     block-size: var(--t-diameter);
     border-radius: 100%;
     mask: radial-gradient(
